--- a/.github/workflows/publish_t_cache.yml
+++ b/.github/workflows/publish_t_cache.yml
@@ -1,4 +1,4 @@
-name: Publish TCache
+name: Publish new versions
 
 on:
   workflow_dispatch:
@@ -8,9 +8,55 @@ on:
 
 jobs:
   publish:
+    runs-on: ubuntu-latest
+    environment: "pub.dev"
+
     permissions:
       id-token: write # Required for authentication using OIDC
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
-    with:
-      environment: "pub.dev"
-      working-directory: packages/cache
+
+    steps:
+      # Checkout the code
+      - name: Checkout the code
+        uses: actions/checkout@v4
+
+      # Install Flutter
+      - name: Install and set Flutter version
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+          cache: true
+
+      # Precache Flutter
+      - name: Precache Flutter
+        run: flutter precache --universal
+
+      # Install Melos
+      - name: Install and set Melos version
+        uses: bluefireteam/melos-action@v3
+
+      # Install dependencies
+      - name: Install dependencies
+        run: flutter pub get
+
+      # melos bootstrap
+      - name: Bootstrap
+        run: melos bootstrap
+
+      # Create publishing token
+      - name: Create publishing token (flutter)
+        run: |
+          set -eo pipefail
+          PUB_TOKEN=$(curl --retry 5 --retry-connrefused -sLS "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=https://pub.dev" -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" | jq -r '.value')
+          echo "PUB_TOKEN=${PUB_TOKEN}" >> $GITHUB_ENV
+          export PUB_TOKEN
+          flutter pub token add https://pub.dev --env-var PUB_TOKEN
+
+      # Publish dry run
+      - name: Publish - dry run
+        run: flutter pub publish --dry-run
+        working-directory: packages/cache
+
+      # Publishing...
+      - name: Publish to pub.dev
+        run: flutter pub publish -f
+        working-directory: packages/cache
