--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,16 +1,23 @@
-name: Publish new versions
+name: Publish Packages
 
 on:
   workflow_dispatch:
   push:
     tags:
+      - "subx-v[0-9]+.[0-9]+.[0-9]+*"
       - "t_cache-v[0-9]+.[0-9]+.[0-9]+*"
+      - "t_helpers-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tbloc-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tbloc_example-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tenhance-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tlogger-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tmodel-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tstore-v[0-9]+.[0-9]+.[0-9]+*"
+      - "tsub-v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: "pub.dev"
-
     permissions:
       id-token: write # Required for authentication using OIDC
 
@@ -53,10 +60,8 @@ jobs:
 
       # Publish dry run
       - name: Publish - dry run
-        run: flutter pub publish --dry-run
-        working-directory: packages/cache
+        run: melos publish --dry-run -y
 
       # Publishing...
       - name: Publish to pub.dev
-        run: flutter pub publish -f
-        working-directory: packages/cache
+        run: melos publish --no-dry-run -y
