--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,18 +2,19 @@ name: Publish Packages
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - "subx-v[0-9]+.[0-9]+.[0-9]+*"
-      - "t_cache-v[0-9]+.[0-9]+.[0-9]+*"
-      - "t_helpers-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tbloc-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tbloc_example-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tenhance-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tlogger-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tmodel-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tstore-v[0-9]+.[0-9]+.[0-9]+*"
-      - "tsub-v[0-9]+.[0-9]+.[0-9]+*"
+  # FIXME: Uncomment when ready to publish
+  # push:
+  #   tags:
+  #     - "subx-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "t_cache-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "t_helpers-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tbloc-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tbloc_example-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tenhance-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tlogger-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tmodel-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tstore-v[0-9]+.[0-9]+.[0-9]+*"
+  #     - "tsub-v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   publish:
