--- a/.github/workflows/publish_subx.yml
+++ b/.github/workflows/publish_subx.yml
@@ -3,7 +3,7 @@ name: Publish Packages
 on:
   push:
     tags:
-      - "release-*"
+      - "subx-v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   publish:
@@ -51,8 +51,8 @@ jobs:
 
       # Publish dry run
       - name: Publish - dry run
-        run: melos publish --dry-run -y
+        run: melos publish --dry-run -y --scope=subx
 
       # Publishing...
       - name: Publish to pub.dev
-        run: melos publish --no-dry-run -y
+        run: melos publish --no-dry-run -y --scope=subx
