--- a/packages/bloc/example/pubspec.yaml
+++ b/packages/bloc/example/pubspec.yaml
@@ -4,13 +4,13 @@ dependencies:
   go_router: ^14.1.3
   tbloc: ^0.25.2+2
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 flutter:
   uses-material-design: true
 name: tbloc_example
