--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -1,23 +1,23 @@
 dependencies:
-  async: ^2.11.0
+  async: ^2.12.0
   flutter:
     sdk: flutter
-  meta: ^1.15.0
+  meta: ^1.16.0
   provider: ^6.1.2
   rxdart: ^0.28.0
   subx: ^1.18.0
   tmodel: ^0.5.19+2
   tuple: ^2.0.2
-  uuid: ^4.4.0
+  uuid: ^4.5.1
 description: A dart library that helps you to implement the BLoC pattern.
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 homepage: https://github.com/tyrcord/t/tree/main/packages/tbloc
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tbloc/issues
 name: tbloc
