--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -2,8 +2,8 @@ dependencies:
   diacritic: ^0.1.5
   flutter:
     sdk: flutter
-  go_router: ^14.2.7
-  intl: ^0.19.0
+  go_router: ^14.8.1
+  intl: ^0.20.0
   rational: ^2.2.3
   tenhance: ^0.0.15+2
   tmodel: ^0.5.19+2
@@ -12,13 +12,13 @@ description:
   A collection of helper functions to simplify common programming tasks
   in Dart.
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 name: t_helpers
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 version: 0.0.61
