--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -1,17 +1,17 @@
 dependencies:
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   t_helpers: ^0.0.61
 description: A dart library that helps you to manage model (blueprint) objects.
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 homepage: https://github.com/tyrcord/t/tree/main/packages/model
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tmodel
