--- a/packages/store/pubspec.yaml
+++ b/packages/store/pubspec.yaml
@@ -1,24 +1,24 @@
 dependencies:
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  meta: ^1.12.0
-  path: ^1.9.0
+  meta: ^1.16.0
+  path: ^1.9.1
   rxdart: ^0.28.0
   t_helpers: ^0.0.61
   tmodel: ^0.5.19+2
   tsub: ^1.16.0
 description: A dart library that helps you to manage and store entity objects.
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tstore/issues
 name: tstore
 repository: https://github.com/tyrcord/t/tree/main/packages/tstore
