--- a/packages/sub/pubspec.yaml
+++ b/packages/sub/pubspec.yaml
@@ -3,13 +3,13 @@ dependencies:
     sdk: flutter
 description: A set of stub files
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 homepage: https://github.com/tyrcord/t/tree/main/packages/tsub
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tsub/issues
 name: tsub
