--- a/packages/subx/pubspec.yaml
+++ b/packages/subx/pubspec.yaml
@@ -1,19 +1,19 @@
 dependencies:
-  async: ^2.11.0
+  async: ^2.12.0
   flutter:
     sdk: flutter
 description:
   "RxDart Subscriptions management. Provide Apis to store and manage RxDart
   subscriptions and provide methods to unsubscribe them all."
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   import_sorter: ^4.6.0
   rxdart: ^0.28.0
 environment:
-  flutter: ">=3.24.0"
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.29.0 <4.0.0"
 homepage: https://github.com/tyrcord/t/tree/main/packages/subx
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/subx/issues
 name: subx
