--- a/packages/bloc/pubspec.yaml
+++ b/packages/bloc/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
   provider: ^6.1.2
   rxdart: ^0.28.0
   subx: ^1.20.0
-  tmodel: ^0.5.21
+  tmodel: ^0.5.21+1
   tuple: ^2.0.2
   uuid: ^4.5.1
 description: A dart library that helps you to implement the BLoC pattern.
@@ -21,4 +21,4 @@ environment:
 homepage: https://github.com/tyrcord/t/tree/main/packages/tbloc
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/tbloc/issues
 name: tbloc
-version: 0.25.4
+version: 0.25.4+1
