--- a/packages/enhance/pubspec.yaml
+++ b/packages/enhance/pubspec.yaml
@@ -3,7 +3,7 @@ dependencies:
     sdk: flutter
   go_router: ^14.8.1
   rational: ^2.2.3
-  t_helpers: ^0.0.63
+  t_helpers: ^0.0.64
 description: A dart library provide a bunch of extenstion.
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -16,4 +16,4 @@ environment:
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/enhance/issues
 name: tenhance
 repository: https://github.com/tyrcord/t/tree/main/packages/enhance
-version: 0.0.17
+version: 0.0.17+1
