--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -5,8 +5,8 @@ dependencies:
   go_router: ^14.8.1
   intl: '>=0.17.0-0 <0.21.0'
   rational: ^2.2.3
-  tenhance: ^0.0.17
-  tmodel: ^0.5.21
+  tenhance: ^0.0.17+1
+  tmodel: ^0.5.21+1
   tsub: ^1.18.0
 description: A collection of helper functions to simplify common programming tasks
   in Dart.
@@ -20,4 +20,4 @@ environment:
   sdk: '>=3.7.0 <4.0.0'
 name: t_helpers
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
-version: 0.0.63
+version: 0.0.64
