--- a/packages/model/pubspec.yaml
+++ b/packages/model/pubspec.yaml
@@ -2,7 +2,7 @@ dependencies:
   equatable: ^2.0.7
   flutter:
     sdk: flutter
-  t_helpers: ^0.0.63
+  t_helpers: ^0.0.64
 description: A dart library that helps you to manage model (blueprint) objects.
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -15,4 +15,4 @@ environment:
 homepage: https://github.com/tyrcord/t/tree/main/packages/model
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tmodel
-version: 0.5.21
+version: 0.5.21+1
