--- a/packages/helpers/pubspec.yaml
+++ b/packages/helpers/pubspec.yaml
@@ -3,7 +3,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.8.1
-  intl: '>=0.17.0-0 <0.21.0'
+  intl: '>=0.20.2 <0.21.0'
   rational: ^2.2.3
   tenhance: ^0.0.17+1
   tmodel: ^0.5.21+1
@@ -16,8 +16,8 @@ dev_dependencies:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.29.0 <4.0.0'
-  sdk: '>=3.7.0 <4.0.0'
+  flutter: '>=3.32.0 <4.0.0'
+  sdk: '>=3.8.0 <4.0.0'
 name: t_helpers
 repository: https://github.com/tyrcord/t/tree/main/packages/helpers
 version: 0.0.64
