--- a/packages/logger/pubspec.yaml
+++ b/packages/logger/pubspec.yaml
@@ -1,7 +1,7 @@
 dependencies:
   flutter:
     sdk: flutter
-  intl: '>=0.17.0-0 <0.21.0'
+  intl: '>=0.20.2 <0.21.0'
   t_helpers: ^0.0.64
   tenhance: ^0.0.17+1
 description: A dart library that helps you to logs your app.
@@ -11,8 +11,8 @@ dev_dependencies:
     sdk: flutter
   import_sorter: ^4.6.0
 environment:
-  flutter: '>=3.29.0 <4.0.0'
-  sdk: '>=3.7.0 <4.0.0'
+  flutter: '>=3.32.0 <4.0.0'
+  sdk: '>=3.8.0 <4.0.0'
 homepage: https://github.com/tyrcord/t/tree/main/packages/logger
 issue_tracker: https://github.com/tyrcord/t/tree/main/packages/issues
 name: tlogger
